samples/_failures_safe/1761350904_be0acf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ec596f0b.c: In function ‘main’:
./samples/SAFE/__tmp_ec596f0b.c:185:5: error: expected identifier or ‘(’ at end of input
  185 |     StateMachine
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_ec596f0b.c:185:5: error: expected declaration or statement at end of input
